--- a/locale/es_EC.po
+++ b/locale/es_EC.po
@@ -5,6 +5,8 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 msgctxt "error:account.fiscalyear:"
 msgid "Fiscal year \"%(first)s\" and \"%(second)s\" have the same invoice sequence."
 msgstr ""
+"Año fiscal \"%(first)s\" y \"%(second)s\" tienen la misma secuencia de "
+"servicio."
 
 msgctxt "error:account.fiscalyear:"
 msgid ""
@@ -23,6 +25,8 @@ msgid ""
 "Period \"%(period)s\" must have the same company as its fiscal year "
 "(%(fiscalyear)s)."
 msgstr ""
+"Periodo \"%(period)s\" debe tener la misma empresa que año fiscal "
+"(%(fiscalyear)s)."
 
 msgctxt "error:account.period:"
 msgid ""
@@ -50,22 +54,36 @@ msgid ""
 "You can not modify line \"%(line)s\" from service \"%(invoice)s\" that is "
 "delivered."
 msgstr ""
+"No puede modificar la linea \"%(line)s\" del servicio \"%(invoice)s\" ya "
+"está entregado."
 
 msgctxt "error:service.service:"
 msgid "You can not modify service \"%s\" because it is delivered."
 msgstr "No puede modificar el servicio \"%s\" porque ya está entregado."
 
+msgctxt "field:account.fiscalyear,home_service_sequence:"
+msgid "Home Service Sequence"
+msgstr "Secuencia de Servicio a Domicilio"
+
 msgctxt "field:account.fiscalyear,service_sequence:"
-msgid "Service Center Sequence"
+msgid "Service Sequence"
 msgstr "Secuencia de Servicio Técnico"
 
+msgctxt "field:account.period,home_service_sequence:"
+msgid "Home Service Sequence"
+msgstr "Secuencia de Servicio a Domicilio"
+
 msgctxt "field:account.period,service_sequence:"
-msgid "Service Center Sequence"
+msgid "Service Sequence"
 msgstr "Secuencia de Servicio Técnico"
 
 msgctxt "field:party.party,type_document:"
 msgid "Type Document"
 msgstr "Tipo de Documento"
+
+msgctxt "field:service.draft_service.start,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:service.periferic,create_date:"
 msgid "Create Date"
@@ -98,6 +116,14 @@ msgstr "Modificado por Usuario"
 msgctxt "field:service.service,accessories:"
 msgid "Accessories"
 msgstr "Accesorios"
+
+msgctxt "field:service.service,beaten:"
+msgid "Beaten"
+msgstr "Golpeado"
+
+msgctxt "field:service.service,broken:"
+msgid "Broken"
+msgstr "Roto"
 
 msgctxt "field:service.service,case_number:"
 msgid "Case number"
@@ -147,9 +173,17 @@ msgctxt "field:service.service,invoice_number:"
 msgid "Invoice number"
 msgstr "Número de factura"
 
+msgctxt "field:service.service,lined:"
+msgid "Lined"
+msgstr "Rayado"
+
 msgctxt "field:service.service,lines:"
 msgid "Lines"
 msgstr "Lineas"
+
+msgctxt "field:service.service,new:"
+msgid "New"
+msgstr "Nuevo"
 
 msgctxt "field:service.service,number_service:"
 msgid "No. Comprobante"
@@ -178,6 +212,10 @@ msgstr "No. guía remisión"
 msgctxt "field:service.service,send_date:"
 msgid "Send Date"
 msgstr "Fecha de envío"
+
+msgctxt "field:service.service,stained:"
+msgid "Stained"
+msgstr "Manchado"
 
 msgctxt "field:service.service,state:"
 msgid "State"
@@ -347,6 +385,10 @@ msgctxt "model:ir.action,name:report_service"
 msgid "Imprimir comprobante"
 msgstr ""
 
+msgctxt "model:ir.action,name:wizard_draft_service"
+msgid "Reverse Service"
+msgstr "Reversar Servicio"
+
 msgctxt "model:ir.action.act_window.domain,name:act_home_service_domain_all"
 msgid "All"
 msgstr "Todo"
@@ -411,6 +453,10 @@ msgstr "Servicio Técnico"
 msgctxt "model:ir.ui.menu,name:service_center"
 msgid "Service Center"
 msgstr "Centro Servicio Técnico"
+
+msgctxt "model:service.draft_service.start,name:"
+msgid "Draft Service Start"
+msgstr "Reversar Servicio"
 
 msgctxt "model:service.periferic,name:"
 msgid "Periferic"
@@ -631,3 +677,11 @@ msgstr "No cubre garantia"
 msgctxt "view:service.service:"
 msgid "_Without Solution"
 msgstr "Sin Solución"
+
+msgctxt "wizard_button:service.draft_service,start,draft_:"
+msgid "Reverse"
+msgstr "Reversar"
+
+msgctxt "wizard_button:service.draft_service,start,end:"
+msgid "Exit"
+msgstr "Salir"
