--- a/locale/es_EC.po
+++ b/locale/es_EC.po
@@ -37,29 +37,28 @@ msgstr ""
 "ya hay servicios entregados."
 
 msgctxt "error:service.service.history_lines:"
-msgid "You can not add a line to history \"%(invoice)s\" that is delivered."
-msgstr "No puede agregar linea de historial, el servicio ya está entregado"
+msgid "You can not add a line to history \"%(invoice)s\" "
+msgstr "No puede modifical el historial."
 
 msgctxt "error:service.service.history_lines:"
 msgid "You can not modify line \"%(line)s\" from history \"%(invoice)s\""
-msgstr "No puede modicar el historial"
+msgstr "No puede modicar el historial."
 
 msgctxt "error:service.service.line:"
-msgid "You can not add a line to service \"%(invoice)s\" that is delivered."
-msgstr ""
-"No puede agregar lineas al servicio \"%(invoice)s\"  que ya está entregado."
+msgid "You can not add a line to service \"%(invoice)s.\""
+msgstr "No puede agregar lineas al servicio \"%(invoice)s\"."
 
 msgctxt "error:service.service.line:"
-msgid ""
-"You can not modify line \"%(line)s\" from service \"%(invoice)s\" that is "
-"delivered."
-msgstr ""
-"No puede modificar la linea \"%(line)s\" del servicio \"%(invoice)s\" ya "
-"está entregado."
+msgid "You can not modify line \"%(line)s\" from service \"%(invoice)s\"."
+msgstr "No puede modificar la linea \"%(line)s\" del servicio \"%(invoice)s\"."
 
 msgctxt "error:service.service:"
-msgid "You can not modify service \"%s\" because it is delivered."
-msgstr "No puede modificar el servicio \"%s\" porque ya está entregado."
+msgid "You can not delete service \"%s\"."
+msgstr "No puede eliminar el servicio \"%s\"."
+
+msgctxt "error:service.service:"
+msgid "You can not modify service \"%s\"."
+msgstr "No puede modificar el servicio \"%s\"."
 
 msgctxt "field:account.fiscalyear,home_service_sequence:"
 msgid "Home Service Sequence"
